--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./resources/ol-layerswitcher.css" />
     <link rel="stylesheet" href="./resources/qgis2web.css" />
     <link rel="stylesheet" href="./style.css" />
-    <title>States Redraw</title>
+    <title>Reimagining the USA</title>
   </head>
   <body>
     <div id="overlay">
